fix notification mobile align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,6 +173,13 @@ input::placeholder {
   color: #fffd;
 }
 
+@media screen and (min-width: 1024px) {
+  .register__info {
+    text-align: left;
+    margin-bottom: 0;
+  }
+}
+
 /* --- Navbar Section --- */
 
 .navbar {
